# file-rotate

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: rotate_by_date.rs
src/: compression.rs  lib.rs  suffix.rs  tests.rs
