[package]
name = "file-rotate"
version = "0.6.0"
authors = ["Kevin Robert Stravers <macocio@gmail.com>", "Erlend Langseth <3rlendhl@gmail.com>"]
edition = "2018"
description = "Log rotation for files"
homepage = "https://github.com/BourgondAries/file-rotate"
repository = "https://github.com/BourgondAries/file-rotate"
keywords= ["log", "rotate", "logrotate"]
license = "MIT"

[dependencies]
chrono = { version = "0.4.11", optional = true }
flate2 = "1.0"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tempdir = "0.3.7"

[features]
default = ["chrono04"]
chrono04 = ["chrono"]
