[package]
name = "file-rotate"
version = "0.7.2"
authors = ["Kevin Robert Stravers <macocio@gmail.com>", "Erlend Langseth <3rlendhl@gmail.com>"]
edition = "2018"
description = "Log rotation for files"
homepage = "https://github.com/BourgondAries/file-rotate"
repository = "https://github.com/BourgondAries/file-rotate"
keywords= ["log", "rotate", "logrotate"]
license = "MIT"

[dependencies]
chrono = { version = "0.4.20", default-features = false, features = ["clock"] }
flate2 = "1.0"

[dev-dependencies]
filetime = "0.2"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tempfile = "3"
