[package]
name = "file-rotate"
version = "0.7.6"
authors = ["Kevin Robert Stravers <kevin@stravers.net>", "Erlend Langseth <3rlendhl@gmail.com>"]
edition = "2018"
description = "Log rotation for files"
homepage = "https://github.com/kstrafe/file-rotate"
repository = "https://github.com/kstrafe/file-rotate"
keywords= ["log", "rotate", "logrotate"]
license = "MIT"

[features]
default = ["time", "compression"]
time = ["dep:chrono"]
compression = ["dep:flate2"]

[dependencies]
chrono = { version = "0.4.20", default-features = false, features = ["clock"], optional = true }
flate2 = { version = "1.0", optional = true }

[dev-dependencies]
filetime = "0.2"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tempfile = "3"
